infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: udagram
  labels:
    name: udagram
    istio-injection: enabled
